src/test/test-models/good/parser-generator/multidim_var_transform_param_ar45_mat23.stan
transformed parameters {
  array[4, 5] matrix<lower=0, upper=1>[2, 3] ar_mat;
  real x;
  x = 1;
}

