src/test/test-models/bad/row_vector_expr_bad2.stan
transformed data {
  real x;
  row_vector[2] A;
  row_vector[3] B;
  row_vector[2] X = [ x, A ];
}
model {
}
